// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Event"
  />
   
  <div
    class="flex-grow h-full bg-white"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 py-6 mx-auto lg:px-8"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Create Event
        
        </h1>
      </div>
    </header>
     
    <main>
      <!---->
       
      <div
        class="w-full"
      />
       
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
      >
        <div
          class="px-6 sm:px-0 grid grid-cols-2 sm:gap-8 gap-6 "
        >
          <form
            class="col-span-2"
          >
            <div>
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Name:"
              >
                Name:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Name:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Date: (YYYY-MM-DD)"
              >
                Date: (YYYY-MM-DD)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Date: (YYYY-MM-DD)"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Club/ Organiser:"
              >
                Club/ Organiser:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Club/ Organiser:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Website: (URL)"
              >
                Website: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Website: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Results: (URL)"
              >
                Results: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Results: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Winsplits: (URL)"
              >
                Winsplits: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Winsplits: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Routegadget: (URL)"
              >
                Routegadget: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Routegadget: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="relative mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="League:"
              >
                
    League:
  
              </label>
               
              <svg
                class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="margin-bottom: 0.625rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                />
              </svg>
               
              <select
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="League:"
              >
                <option />
                 
              </select>
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="More Information:"
              >
                More Information:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="More Information:"
                type="text"
              />
            </div>
             
            <div
              class="mt-6 text-left"
            >
              <label
                class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
              >
                <span
                  class="mr-3 align-top"
                >
                  Allow User Submitted Results:
                </span>
                 
                <input
                  class="sr-only"
                  type="checkbox"
                />
                 
                <span
                  class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
                />
              </label>
            </div>
             
            <button
              class="mt-8 button-lg"
            >
              Create Event
            </button>
             
            <!---->
          </form>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Event"
  />
   
  <div
    class="flex-grow h-full bg-white"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 py-6 mx-auto lg:px-8"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Edit Event
        
        </h1>
      </div>
    </header>
     
    <main>
      <!---->
       
      <div
        class="w-full"
      />
       
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
      >
        <div
          class="px-6 sm:px-0 grid grid-cols-2 sm:gap-8 gap-6 "
        >
          <form
            class="col-span-2"
          >
            <div>
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Name:"
              >
                Name:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Name:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Date: (YYYY-MM-DD)"
              >
                Date: (YYYY-MM-DD)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Date: (YYYY-MM-DD)"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Club/ Organiser:"
              >
                Club/ Organiser:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Club/ Organiser:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Website: (URL)"
              >
                Website: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Website: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Results: (URL)"
              >
                Results: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Results: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Winsplits: (URL)"
              >
                Winsplits: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Winsplits: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="Routegadget: (URL)"
              >
                Routegadget: (URL)
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="Routegadget: (URL)"
                type="url"
              />
            </div>
             
            <div
              class="relative mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="League:"
              >
                
    League:
  
              </label>
               
              <svg
                class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="margin-bottom: 0.625rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 9l-7 7-7-7"
                />
              </svg>
               
              <select
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="League:"
              >
                <option />
                 
              </select>
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-main-600"
                for="More Information:"
              >
                More Information:
              </label>
               
              <input
                class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
                id="More Information:"
                type="text"
              />
            </div>
             
            <div
              class="mt-6 text-left"
            >
              <label
                class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
              >
                <span
                  class="mr-3 align-top"
                >
                  Allow User Submitted Results:
                </span>
                 
                <input
                  class="sr-only"
                  type="checkbox"
                />
                 
                <span
                  class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
                />
              </label>
            </div>
             
            <!---->
             
            <button
              class="mt-8 button-lg"
            >
              Update Event
            </button>
          </form>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;
